--- a/src/main/java/org/tamm/form/ResponsePage.html
+++ b/src/main/java/org/tamm/form/ResponsePage.html
@@ -7,5 +7,9 @@
 <body>
 	<span wicket:id="result"></span>
 	<span wicket:id="choice"></span>
+	<br>
+	<span wicket:id="start"></span>
+	<br>
+	<span wicket:id="end"></span>
 </body>
 </html>
